# mortgage-assistant-agent

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  DEPLOY.md  Dockerfile  README.md  pyproject.toml
database/: schema.sql
src/vera/: __init__.py  api.py  app.py
src/vera/agents/: agent.py
src/vera/auth/: __init__.py  dependencies.py  invites.py  seed_super_admin.py  tokens.py
src/vera/core/: config.py  encryption.py  pricing.py  telemetry.py
src/vera/domain/: enums.py  models.py  status.py
src/vera/evals/: _ragas_compat.py  cases.py  judge.py  langsmith_eval.py  ragas_cases.py  ragas_eval.py  run.py
src/vera/llm/: model.py
src/vera/prompts/: hub.py  system.py
src/vera/repositories/: __init__.py  base.py  memory.py  organizations.py  seed.py  supabase_repo.py
src/vera/services/: applications.py  conversation_memory.py  cost_tracker.py  organizations.py
src/vera/tools/: __init__.py  applications.py  calculations.py  escalation.py
tests/: conftest.py  test_agent.py  test_api.py  test_auth.py  test_evals.py  test_models.py  test_ragas_eval.py  test_repositories.py  test_services.py  test_status.py  test_tools.py
